# gira

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  jira.rs  lib.rs  main.rs  utils.rs
tests/: jira_api.rs  jira_test.rs  mock_writer.rs
tests/data/: search_res.json
