[package]
authors = ["Manvir Bal"]
name = "gira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gira"
path = "src/main.rs"
rust-version="1.71.0"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
headers = "0.3.8"
hyper = { version = "0.14.27", features = ["client", "full"] }
hyper-tls = "0.5.0"
regex = "1.9.4"
serde = { version="1.0.174", features=["derive"]}
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.6.8"
test-case = "3.1.0"
